[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "tetris game made by pygame"
authors = ["yanyongyu <https://github.com/yanyongyu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.scripts]
game = "tetris:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
