[tool.poetry]
name = "pytetris"
version = "1.0.0"
description = "tetris game with ai made by pygame"
authors = ["yanyongyu <https://github.com/yanyongyu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yanyongyu/python-tetris"
keywords = ["pygame", "tetris", "ai", "pierre_dellacherie"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: Free for non-commercial use",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment :: Puzzle Games"
]
exclude = ["pytetris/*.db"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.6"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.scripts]
game = "pytetris.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
